.deploys/deploy_batch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-deployment
  labels:
    app: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: batch
  template:
    metadata:
      labels:
        app: batch
    spec:
      containers:
        - name: batch
          image: $CI_REGISTRY/cour-de-cassation/juritj:$CI_COMMIT_BRANCH-$CI_COMMIT_SHORT_SHA-debug
