.deploys/deploy_bucket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucket-deployment
  labels:
    app: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bucket
  template:
    metadata:
      labels:
        app: bucket
    spec:
      containers:
        - name: bucket
          image: minio/minio:latest
          ports:
          - containerPort: 9000
          - containerPort: 9001
          volumeMounts:
          - name: bucket-volume
            mountPath: /data
          command:
          - minio
          args:
          - server
          - /data
          - --console-address 
          - ":9001"
      volumes:
      - name: bucket-volume
        hostPath:
          path: /data/bucket

---
apiVersion: v1
kind: Service
metadata:
  name: bucket-service
spec:
  selector:
    app: bucket
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  type: ClusterIP
