.deploys/deploy_database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: juritj
  labels:
    app: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mongo:6.0.4-jammy
          ports:
          - containerPort: 27017
          volumeMounts:
          - name: database-volume
            mountPath: /data/db
      volumes:
      - name: database-volume
        hostPath:
          path: /data/mongodb

---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: juritj
spec:
  selector:
    app: database
  ports:
    - name: database
      port: 27017
      targetPort: 27017
  type: ClusterIP
